Bug fix | Fix position overlap on Hero banner

--- a/src/modules/hero/_style.scss
+++ b/src/modules/hero/_style.scss
@@ -155,6 +155,10 @@
         position: relative;
     }
 
+    .wsu-eyebrow-heading {
+        position: relative;
+    }
+
     &__link:focus,
     &__link:hover {
 
